--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
+  <link rel="icon" type="image/png" href="https://w7.pngwing.com/pngs/267/531/png-transparent-portfolio-briefcase-showcase-business-adobe-portfolio-adobe-family-software-icon-thumbnail.png">
 
   <!--css-->
   <link rel="stylesheet" href="styles.css">
@@ -317,5 +318,6 @@
   <!-- JS -->
   <script src="main.js"></script>
 </body>
+
 
 </html>
